// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accept jsx as children 1`] = `
<span
  className="css-1rtlwt4"
>
  <span>
    string
  </span>
</span>
`;

exports[`Badge danger 1`] = `
<span
  className="css-1r81zrl"
>
  danger
</span>
`;

exports[`Badge default 1`] = `
<span
  className="css-1rtlwt4"
>
  default
</span>
`;

exports[`Badge outline 1`] = `
<span
  className="css-1s4jj7m"
>
  outline
</span>
`;

exports[`Badge primary 1`] = `
<span
  className="css-1s6ggg6"
>
  primary
</span>
`;

exports[`Badge success 1`] = `
<span
  className="css-7otxiv"
>
  success
</span>
`;

exports[`Badge warning 1`] = `
<span
  className="css-jogxwy"
>
  warning
</span>
`;
